# CrabLang

./: .gitignore  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst  modules.rst
src/crablang/: __init__.py  file_parser.py  flashcard_manager.py
tests/: __init__.py  test_file_parser.py
