[project]
name = "crablang"
version = "0.1.0"
description = "The Ultimate OpenSource Word Learning App"
authors = [
    {name = "CrabLover",email = "molozhavenko.aa@phystech.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "chardet (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
black = "^25.1.0"


[tool.poetry.group.docs.dependencies]
sphinx = "<8.2.0"
sphinx-rtd-theme = "<4.0"
myst-parser = "<3.0"
sphinx-autodoc-typehints = "<2.0"

[tool.black]
line-length = 77
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.flake8]
max-line-length = 77  # Match Black's line length
extend-ignore = ["E203", "E701"] # Ignore specific Flake8 errors
exclude = ".git,__pycache__,build,dist,venv"

[tool.poetry.scripts]
docs = "scripts.build_docs:main"
docs-serve = "scripts.serve_docs:main"
